# TPL2025

./: .env_copy  .gitignore  README.md  guardrail.py  guardrail_copy.py  main.py  main_backup.py  pyproject.toml  streamlitapp.py  streamlitapp_v1.py  test.ipynb  test_main.py
agents/: codegen_agent.py  execution_agent.py  guardrail.py  intent_agent.py  interpretation_agent.py  llm_client.py  logical_check_agent.py  reporting_agent.py  retrieval_agent.py
core/: config.py  execute_code_tool.py  logging_config.py  metadata_filter.py  session_manager.py
metadata/: HospitalinfoPatientsClinicaldata.xlsx  NonClinicalMetricsschema.xlsx  NonClinical_sheets_data.json
notebooks/: create_metadata_file.ipynb  full_role_based_metric_access.json  non_clinical_metrics_access.csv  non_clinical_metrics_metadata.json  read_rag.ipynb
pipelines/: pipeline.py
prompts/: prompt_templates.py
