[project]
name = "healthcare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-search-documents>=11.5.2",
    "duckdb>=1.3.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]
